tests/NormalTests/paczka2/big_fuzzy/65447531.err
Error in line 13: KLy9rj A697 12,8
Error in line 16: KLy9rj A385 52,3
Error in line 20: tH1 A385 -1,0
Error in line 18: A697 A504 67,3
Error in line 19: KLy9rj S180 44,3
Error in line 25: KLy9rj A504 9,0
Error in line 24: M31XWg A697 37,7
Error in line 58: Vj5MSa61 A697 61,86
Error in line 65: Vj5MSa61 A385 37,8
Error in line 66: Vj5MSa61 S180 69,2
Error in line 56: KLy9rj S180 12,8
Error in line 72: nyzk6D7BD A504 45,88
Error in line 69: KLy9rj A504 46,0
Error in line 73: nyzk6D7BD A504 70,1
Error in line 2: tH1 A385 19,1
Error in line 89: nyzk6D7BD S180 -1,1
Error in line 85: nyzk6D7BD S180 88,0
Error in line 104: tH1 A504 54,6
Error in line 111: tH1 A38ù 96,2
Error in line 110: nyzk6D7BD A504 175,9
Error in line 107: tH1 A385 19,4
Error in line 113: nyzk6D7BD A385 30,3
Error in line 122: aR9 A504 88,6
Error in line 119: tH1 S180 65,8
Error in line 121: KLy9rj A697 421,2
Error in line 162: nyzk6D7BD A385 16,9
Error in line 164: nyzk6D7BD A697 7,7
Error in line 165: nyzk6D7BD S180 88,7
Error in line 167: M31XWg A385 77,9
Error in line 168: Vj5MSa61 A385 68,9
Error in line 158: A697 A385 240,7
Error in line 166: nyzk6D7BD A504 26,7
Error in line 178: tH1 S180 41,8
Error in line 195: nyzk6D7BD S180 100,0
Error in line 198: nyzk6D7BD A385 66,2
Error in line 197: aR9 A697 1,0
Error in line 199: nyzk6D7BD A504 6,9
Error in line 215: M31XWg S180 23,4
Error in line 221: nyzk6D7BD A504 6,7
Error in line 219: M31XWg A385 56,2
Error in line 245: M31XWg A504 447,3
